tests/react_imports/react_imports.exp
Error --------------------------------------------------- commonjs-pascal.js:4:2

Cannot cast `React.Component` to number because statics of `React.Component` [1]
is incompatible with number [2].


Error: commonjs-pascal.js:6
  6: ({}: React.Node); // Error
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error
            ^^ object literal

Error -------------------------------------------------- commonjs-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module
`react` [1].


Error ---------------------------------------------------------- commonjs.js:4:2

Cannot cast `React.Component` to number because statics of `React.Component` [1]
is incompatible with number [2].


Error: commonjs.js:6
  6: ({}: React.Node); // Error
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error
            ^^ object literal

Error --------------------------------------------------------- commonjs.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module
`react` [1].


Error ------------------------------------------------- es-default-pascal.js:4:2

Cannot cast `React.Component` to number because statics of `React.Component` [1]
is incompatible with number [2].


Error: es-default-pascal.js:6
  6: ({}: React.Node); // Error: Not in default export.
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error: Not in default export.
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error: Not in default export.
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error: Not in default export.
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error: Not in default export.
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error: Not in default export.
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error: Not in default export.
            ^^ object literal

Error ------------------------------------------------ es-default-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module
`react` [1].


Error -------------------------------------------------------- es-default.js:4:2

Cannot cast `React.Component` to number because statics of `React.Component` [1]
is incompatible with number [2].


Error ------------------------------------------------------- es-default.js:5:25

Cannot get `React.Node` because property `Node` is missing in object type [1].


Error ------------------------------------------------------- es-default.js:6:12

Cannot get `React.Node` because property `Node` is missing in object type [1].


Error ------------------------------------------------------- es-default.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in object
type [1].


Error ----------------------------------------------- es-namespace-pascal.js:4:2

Cannot cast `React.Component` to number because statics of `React.Component` [1]
is incompatible with number [2].


Error: es-namespace-pascal.js:6
  6: ({}: React.Node); // Error
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error
            ^^ object literal

Error ---------------------------------------------- es-namespace-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module
`React` [1].


Error ------------------------------------------------------ es-namespace.js:4:2

Cannot cast `React.Component` to number because statics of `React.Component` [1]
is incompatible with number [2].


Error: es-namespace.js:6
  6: ({}: React.Node); // Error
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error
            ^^ object literal

Error ----------------------------------------------------- es-namespace.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module
`react` [1].



Found 19 errors
